WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257455
[GStreamer] codecForStreamId() should return empty string when codec is unknown
https://bugs.webkit.org/show_bug.cgi?id=257455
Summary
[GStreamer] codecForStreamId() should return empty string when codec is unknown
Philippe Normand
Reported
2023-05-29 06:29:08 PDT
Prospective fix for racy crashes like this Thread 1 (Thread 0x7f324d900540 (LWP 778165)): #0 0x00007f325900bf5e in WTF::String WTF::HashMap<WTF::String, WTF::String, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::get<WTF::IdentityHashTranslator<WTF::HashMap<WTF::String, WTF::String, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::DefaultHash<WTF::String> >, WTF::String>(WTF::String const&) const () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #1 0x00007f325942d184 in WebCore::MediaPlayerPrivateGStreamer::codecForStreamId(WTF::String const&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #2 0x00007f3259453e0c in WebCore::VideoTrackPrivateGStreamer::capsChanged(WTF::String const&, WTF::GRefPtr<_GstCaps> const&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #3 0x00007f325944486e in WTF::Detail::CallableWrapper<WebCore::TrackPrivateBaseGStreamer::setPad(WTF::GRefPtr<_GstPad>&&)::{lambda(_GstPad*, _GstPadProbeInfo*, WebCore::TrackPrivateBaseGStreamer*)#1}::operator()(_GstPad*, _GstPadProbeInfo*, WebCore::TrackPrivateBaseGStreamer*) const::{lambda()#1}, void>::call() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #4 0x00007f32562cb97a in WTF::RunLoop::performWork() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #5 0x00007f3256344779 in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #6 0x00007f32563451ef in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #7 0x00007f32520d1c37 in g_main_dispatch (context=0x55f9018eb130) at ../glib/gmain.c:3419 #8 g_main_context_dispatch (context=0x55f9018eb130) at ../glib/gmain.c:4137 #9 0x00007f3252128028 in g_main_context_iterate.constprop.0 (context=0x55f9018eb130, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #10 0x00007f32520d12af in g_main_loop_run (loop=0x55f901919510) at ../glib/gmain.c:4413 #11 0x00007f3256345320 in WTF::RunLoop::run() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #12 0x00007f325936e05e in int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #13 0x00007f3251a6c54a in __libc_start_call_main (main=main@entry=0x55f8ff974920 <main>, argc=argc@entry=4, argv=argv@entry=0x7ffca8e44fe8) at ../sysdeps/nptl/libc_start_call_main.h:58 #14 0x00007f3251a6c60b in __libc_start_main_impl (main=0x55f8ff974920 <main>, argc=4, argv=0x7ffca8e44fe8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=<optimized out>) at ../csu/libc-start.c:389 #15 0x000055f8ff974855 in _start () at ../sysdeps/x86_64/start.S:115
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-29 06:36:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14453
EWS
Comment 2
2023-05-30 00:36:49 PDT
Committed
264664@main
(aeffd122d8e7): <
https://commits.webkit.org/264664@main
> Reviewed commits have been landed. Closing PR #14453 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-30 00:37:16 PDT
<
rdar://problem/109993002
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug