[GStreamer] codecForStreamId() should return empty string when codec is unknown https://bugs.webkit.org/show_bug.cgi?id=257455

Reviewed by Xabier Rodriguez-Calvar.

Make sure to return an empty string if the streamId hasn't been internally cached yet. Call sites in
TrackPrivateBaseGStreamer sub-classes can already handle this.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::codecForStreamId):

Canonical link: https://commits.webkit.org/264664@main